tests/baselines/reference/ES5SymbolProperty7.errors.txt
ES5SymbolProperty7.ts(7,9): error TS2454: Variable 'Symbol' is used before being assigned.


==== ES5SymbolProperty7.ts (1 errors) ====
    var Symbol: { iterator: any };
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~
!!! error TS2454: Variable 'Symbol' is used before being assigned.